working on small fixes like, pre and code tags, outlined tables outside for now, still working on docs anchor for further normalize and reset testing, patched .icon to set font-style normal in case it gets used on an <i> tag

--- a/jsr/lilycat/v3/src/icons.css
+++ b/jsr/lilycat/v3/src/icons.css
@@ -16,6 +16,7 @@
     sans-serif;
   font-feature-settings: "liga";
   font-size: clamp(100%, 100dvw, var(--size));
+  font-style: normal;
   font-variation-settings:
     "FILL" var(--fill),
     "wght" 250,
